Из файлов перевода удалены пункты "Выход"

--- a/ios-xcode/lang/cz.ini
+++ b/ios-xcode/lang/cz.ini
@@ -24,8 +24,7 @@ MAIN_MENU = \
 <a:/load_menu>Nahraj hru</a>\n\
 <a:/save_menu>Ulož hru</a>\n\
 <a:/about>Autoři</a>\n\
-<a:/settings>Nastavení</a>\n\
-<a:/ask_quit>Konec</a>
+<a:/settings>Nastavení</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
