--- a/ios-xcode/lang/it.ini
+++ b/ios-xcode/lang/it.ini
@@ -24,8 +24,7 @@ MAIN_MENU = \
 <a:/load_menu>Carica</a>\n\
 <a:/save_menu>Salva</a>\n\
 <a:/about>Informazioni</a>\n\
-<a:/settings>Impostazioni</a>\n\
-<a:/ask_quit>Esci</a>
+<a:/settings>Impostazioni</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
