--- a/ios-xcode/lang/es.ini
+++ b/ios-xcode/lang/es.ini
@@ -24,8 +24,7 @@ MAIN_MENU = \
 <a:/load_menu>Cargar juego</a>\n\
 <a:/save_menu>Guardar juego</a>\n\
 <a:/about>Acerca de</a>\n\
-<a:/settings>Opciones</a>\n\
-<a:/ask_quit>Salir</a>
+<a:/settings>Opciones</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
