--- a/ios-xcode/lang/ua.ini
+++ b/ios-xcode/lang/ua.ini
@@ -24,8 +24,7 @@ MAIN_MENU = \
 <a:/load_menu>Завантажити гру</a>\n\
 <a:/save_menu>Зберегти гру</a>\n\
 <a:/about>ІнформацІя</a>\n\
-<a:/settings>Налаштування</a>\n\
-<a:/ask_quit>Вихід</a>
+<a:/settings>Налаштування</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
