--- a/ios-xcode/lang/pt.ini
+++ b/ios-xcode/lang/pt.ini
@@ -24,7 +24,8 @@ MAIN_MENU = \
 <a:/load_menu>Carregar jogo</a>\n\
 <a:/save_menu>Salvar jogo</a>\n\
 <a:/about>Sobre</a>\n\
-<a:/settings>Opções</a>
+<a:/settings>Opções</a>\n\
+<a:/ask_quit>Sair</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
