--- a/ios-xcode/lang/ru.ini
+++ b/ios-xcode/lang/ru.ini
@@ -24,7 +24,8 @@ MAIN_MENU = \
 <a:/load_menu>Загрузить игру</a>\n\
 <a:/save_menu>Сохранить игру</a>\n\
 <a:/about>Информация</a>\n\
-<a:/settings>Настройки</a>
+<a:/settings>Настройки</a>\n\
+<a:/ask_quit>Выход</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
