--- a/ios-xcode/lang/en.ini
+++ b/ios-xcode/lang/en.ini
@@ -24,7 +24,8 @@ MAIN_MENU = \
 <a:/load_menu>Load game</a>\n\
 <a:/save_menu>Save game</a>\n\
 <a:/about>About</a>\n\
-<a:/settings>Settings</a>
+<a:/settings>Settings</a>\n\
+<a:/ask_quit>Quit</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
