--- a/ios-xcode/lang/fr.ini
+++ b/ios-xcode/lang/fr.ini
@@ -24,7 +24,8 @@ MAIN_MENU = \
 <a:/load_menu>Charger une partie</a>\n\
 <a:/save_menu>Sauvegarder la partie</a>\n\
 <a:/about>À propos</a>\n\
-<a:/settings>Réglages</a>
+<a:/settings>Réglages</a>\n\
+<a:/ask_quit>Quitter</a>
 
 ABOUT_MENU = \
 INSTEAD - %s\n\
